--- a/Home.html
+++ b/Home.html
@@ -8,5 +8,6 @@
 <body>
     <h1>this is website depolyed in github</h1>
     <p>my name is preetham</p>
+    <h3>this is github</h3>
 </body>
 </html>
